--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATABASE CONFIGURATION:
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/library_database?serverTimezone=Europe/Warsaw&useSSL=False
 spring.datasource.username=library_user
