--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,5 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
+	compile('com.google.code.gson:gson:2.8.2')
 }
